--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,10 @@
 @use 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+
+body {
+  font-family: 'DotGothic16', sans-serif;
+  letter-spacing: 0.08em;
+}
 
 button {
   cursor: pointer;
